--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cocoa_grinwallet"
-version = "0.0.1"
+version = "1.0.0"
 authors = ["Gary Yu"]
 description = "Grin Wallet IOS Libs"
 publish = false
@@ -21,21 +21,21 @@ serde_json = "1"
 uuid = "0.7.4"
 
 # Normal using
-grin_wallet = { git = "https://github.com/gottstech/grin-wallet", branch = "master" }
-grin_wallet_api = { git = "https://github.com/gottstech/grin-wallet", branch = "master" }
-grin_wallet_config = { git = "https://github.com/gottstech/grin-wallet", branch = "master" }
-grin_wallet_controller = { git = "https://github.com/gottstech/grin-wallet", branch = "master" }
-grin_wallet_impls = { git = "https://github.com/gottstech/grin-wallet", branch = "master" }
-grin_wallet_libwallet = { git = "https://github.com/gottstech/grin-wallet", branch = "master" }
-grin_wallet_util = { git = "https://github.com/gottstech/grin-wallet", branch = "master" }
+grin_wallet = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.0" }
+grin_wallet_api = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.0" }
+grin_wallet_config = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.0" }
+grin_wallet_controller = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.0" }
+grin_wallet_impls = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.0" }
+grin_wallet_libwallet = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.0" }
+grin_wallet_util = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.0" }
 
 # In case of local development
-#grin_wallet_api = { path = "../../grin-wallet/api", version = "2.0.0-beta.1" }
-#grin_wallet_config = { path = "../../grin-wallet/config", version = "2.0.0-beta.1" }
-#grin_wallet_controller = { path = "../../grin-wallet/controller", version = "2.0.0-beta.1" }
-#grin_wallet_impls = { path = "../../grin-wallet/impls", version = "2.0.0-beta.1" }
-#grin_wallet_libwallet = { path = "../../grin-wallet/libwallet", version = "2.0.0-beta.1" }
-#grin_wallet_util = { path = "../../grin-wallet/util", version = "2.0.0-beta.1" }
+#grin_wallet_api = { path = "../../grin-wallet/api" }
+#grin_wallet_config = { path = "../../grin-wallet/config" }
+#grin_wallet_controller = { path = "../../grin-wallet/controller" }
+#grin_wallet_impls = { path = "../../grin-wallet/impls" }
+#grin_wallet_libwallet = { path = "../../grin-wallet/libwallet" }
+#grin_wallet_util = { path = "../../grin-wallet/util" }
 
 [build-dependencies]
 built = "0.3"
